deploy/k8s/overlays/adam/patch-magis-genesis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magi-node
spec:
  template:
    spec:
      containers:
        - name: magi
          volumeMounts:
            - name: magis-workspace
              mountPath: /magis
      volumes:
        - name: magis-workspace
          persistentVolumeClaim:
            claimName: magi-magis-1-genesis-workspace
